syntax = "proto3";

package Frontend;


//Service
service CustomerPanel {

  rpc  GetUserContractsList(Input) returns (Output) {}
  rpc  GetContractById(Input) returns (Output) {}
  rpc  GetServiceProviderByContractId(Input) returns (Output) {}
  rpc  AddServiceProviderRateByContractId(Input) returns (Output) {}

}

//Parameters
message Input {
  string JSON = 1;
}


//Return Values
message Output {
  string JSON = 1;
}
